Fixed Firefox alignment issue

--- a/source/components/c-icon/_c-icon.scss
+++ b/source/components/c-icon/_c-icon.scss
@@ -20,6 +20,8 @@
 
     background-color: transparent;
 
+    text-align: inherit;
+
     // States
     &:hover {
         text-decoration: underline;
